hphp/test/slow/parser/php-namespace-conflict-2.php.expectf
Fatal error: Cannot declare class Blah\string because the name was implicitly used on line 3; implicit use of names from the HH namespace can be suppressed by adding an explicit `use' statement earlier in the current namespace block in %s/php-namespace-conflict-2.php on line 4
